--- a/index.html
+++ b/index.html
@@ -1,2 +1,276 @@
-# html-Css-star
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="author" content="Karimova Sevinch" />
+    <meta name="description" content="dasturlash bo'yicha  amaliy site" />
+    <link
+      rel="shortcut icon"
+      href="https://w7.pngwing.com/pngs/857/523/png-transparent-beach-rose-red-red-roses-leaf-floribunda-poster.png"
+      type="image/x-icon"
+    />
+    <link rel="stylesheet" href="css/karimova.css" />
+    <title>Rosa</title>
+    <style>
+      .body {
+        height: 100%;
+        width: 70% auto;
+        margin: 15% auto;
+        margin: 0% auto;
+        padding: 0% auto;
+      }
+      .sh369 {
+        width: 100%;
+        height: 100vh;
+        background-color: black;
+        /*background-color: rgb(250, 156, 41); */
+        justify-content: center;
+        align-items: center;
+        display: flex;
+      }
+
+      .ch326913 {
+        width: 18%;
+        height: 240px;
+        display: flex;
+        flex-wrap: wrap;
+        position: absolute;
+        z-index: 9;
+      }
+
+      .ch326913 div {
+        width: 10%;
+        height: 25px;
+        border: 1px solid black;
+        width: calc(100% / 10);
+        border-radius: 50%;
+      }
+
+      .d {
+        background-color: aqua;
+      }
+
+      .f {
+        background-color: aqua;
+      }
+
+      .ir {
+        position: relative;
+      }
+
+      .uch {
+        width: 0;
+        height: 0;
+        border-right: 74px solid transparent;
+        /* background-color: black; */
+        border-left: 74px solid transparent;
+      }
+
+      .j1 {
+        border-bottom: 74px solid black;
+        position: absolute;
+        left: 738px;
+        transform: rotate(90deg);
+        z-index: 2;
+        display: inline-block;
+      }
+
+      .j2 {
+        border-bottom: 74px solid black;
+        position: absolute;
+        left: 459px;
+        transform: rotate(-90deg);
+        z-index: 1;
+      }
+
+      .j3 {
+        border-top: 74px solid black;
+        position: absolute;
+        top: 67vh;
+        left: 600px;
+        z-index: 1;
+        display: inline-block;
+      }
+
+      .j4 {
+        border-bottom: 74px solid black;
+        position: absolute;
+        left: 600px;
+        top: 717vh;
+      }
+
+      .y {
+        width: 25px;
+        height: 25px;
+        border: 1px solid black;
+        background-color: aqua;
+        border-radius: 50%;
+      }
+
+      .g1 {
+        position: absolute;
+        left: -12px;
+        top: 33px;
+        box-shadow: 0px 263px aqua;
+      }
+
+      .g2 {
+        position: absolute;
+        left: -40px;
+        top: 33px;
+        box-shadow: -1px 263px aqua;
+      }
+
+      .g3 {
+        position: absolute;
+        left: 15px;
+        top: 33px;
+        box-shadow: 2px 263px aqua;
+      }
+
+      .g4 {
+        position: absolute;
+        left: -13px;
+        top: 7px;
+        box-shadow: 1px 315px aqua;
+      }
+
+      .g5 {
+        position: absolute;
+        left: -15px;
+        top: -56px;
+        box-shadow: 0px -269px aqua;
+      }
+
+      .g6 {
+        position: absolute;
+        left: -40px;
+        top: -56px;
+        box-shadow: -1px -269px aqua;
+      }
+
+      .g7 {
+        position: absolute;
+        left: 10px;
+        top: -56px;
+        box-shadow: 2px -269px aqua;
+      }
+
+      .g8 {
+        position: absolute;
+        left: -15px;
+        top: -30px;
+        box-shadow: 0px -319px aqua;
+      }
+    </style>
+  </head>
+  <body>
+    <div class="sh369">
+      <div class="ch326913">
+        <div class="d"></div>
+        <div class="f"></div>
+        <div class="d"></div>
+        <div class="f"></div>
+        <div class="d"></div>
+        <div class="f"></div>
+        <div class="d"></div>
+        <div class="f"></div>
+        <div class="d"></div>
+
+        <div class="f"></div>
+        <div class="d"></div>
+        <div class="f"></div>
+        <div class="d"></div>
+        <div class="f"></div>
+        <div class="d"></div>
+        <div class="f"></div>
+        <div class="d"></div>
+        <div class="f"></div>
+        <div class="d"></div>
+        <div class="f"></div>
+        <div class="d"></div>
+        <div class="f"></div>
+        <div class="d"></div>
+        <div class="f"></div>
+        <div class="d"></div>
+        <div class="f"></div>
+        <div class="d"></div>
+
+        <div class="f"></div>
+        <div class="d"></div>
+        <div class="f"></div>
+        <div class="d"></div>
+        <div class="f"></div>
+        <div class="d"></div>
+        <div class="f"></div>
+        <div class="d"></div>
+        <div class="f"></div>
+        <div class="d"></div>
+        <div class="f"></div>
+        <div class="d"></div>
+        <div class="f"></div>
+        <div class="d"></div>
+        <div class="f"></div>
+        <div class="d"></div>
+        <div class="f"></div>
+        <div class="d"></div>
+
+        <div class="f"></div>
+        <div class="d"></div>
+        <div class="f"></div>
+        <div class="d"></div>
+        <div class="f"></div>
+        <div class="d"></div>
+        <div class="f"></div>
+        <div class="d"></div>
+        <div class="f"></div>
+        <div class="d"></div>
+        <div class="f"></div>
+        <div class="d"></div>
+        <div class="f"></div>
+        <div class="d"></div>
+        <div class="f"></div>
+        <div class="d"></div>
+        <div class="f"></div>
+        <div class="d"></div>
+
+        <div class="f"></div>
+        <div class="d"></div>
+        <div class="f"></div>
+        <div class="d"></div>
+        <div class="f"></div>
+        <div class="d"></div>
+        <div class="f"></div>
+        <div class="d"></div>
+        <div class="f"></div>
+        <div class="d"></div>
+        <div class="f"></div>
+        <div class="d"></div>
+        <div class="f"></div>
+        <div class="d"></div>
+        <div class="f"></div>
+        <div class="d"></div>
+        <div class="f"></div>
+        <div class="d"></div>
+      </div>
+      <div class="uch j1">
+        <div class="y g1"></div>
+        <div class="y g2"></div>
+        <div class="y g3"></div>
+        <div class="y g4"></div>
+      </div>
+      <div class="uch j2"></div>
+      <div class="uch j3">
+        <div class="y g5"></div>
+        <div class="y g6"></div>
+        <div class="y g7"></div>
+        <div class="y g8"></div>
+      </div>
+      <div class="uch j4"></div>
+    </div>
+  </body>
+</html>
+
 
